--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 
 script:
-  - mvn sonar:sonar -Dsonar.projectKey=Testing -Dsonar.organization=shirosaya25 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+  - mvn sonar:sonar -Dsonar.projectKey=Shirosaya25_Testing -Dsonar.organization=shirosaya25 -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
